# Changelog

## 0.1.1 (2023-03-27)

* fix: create home directory of database file if it does not exist

## 0.1.0 (2023-03-26)

* initial release